[workspace.package]
edition = "2021"
version = "0.3.0"
authors = ["Oliver Tale-Yazdi <oliver@tasty.limo>"]
license = "GPL-3.0-only"
repository = "https://github.com/ggwpez/typesafe-builders"
description = "Infallible compile-time checked builders for your structs."
readme = "README.md"
keywords = ["macros"]

[workspace]
resolver = "2"

members = [
	"typesafe-builders",
	"typesafe-builders-core",
	"typesafe-builders-derive",
]

[workspace.dependencies]
# Internal deps
typesafe-builders-core = { path = "typesafe-builders-core", version = "0.3.0" }
typesafe-builders-derive = { path = "typesafe-builders-derive", version = "0.3.0" }

# External deps
derive-syn-parse = { version = "0.1.5", default-features = false }
proc-macro2 = { version = "1.0.56", default-features = false }
quote = { version = "1.0.26", default-features = false }
syn = "2.0.13"
