[package]
name = "typesafe-builders-core"

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
readme.workspace = true
keywords.workspace = true
msrc.workspace = true

build = "build.rs"

[dependencies]
derive-syn-parse.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

[dev-dependencies]
typesafe-builders.workspace = true
