[package]
name = "typesafe-builders-derive"

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
readme.workspace = true
keywords.workspace = true

[lib]
proc-macro = true

[dependencies]
quote.workspace = true
syn.workspace = true

typesafe-builders-core = { path = "../typesafe-builders-core" }
