[package]
name = "typesafe-builders-derive"

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
readme.workspace = true
keywords.workspace = true

build = "build.rs"

[lib]
proc-macro = true

[dependencies]
typesafe-builders-core.workspace = true

quote.workspace = true
syn.workspace = true

[dev-dependencies]
typesafe-builders.workspace = true
