[package]
name = "typesafe-builders-derive"

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
readme = "README.md"
keywords.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
typesafe-builders-core.workspace = true

quote.workspace = true
syn.workspace = true
