[package]
name = "typesafe-builders"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
typesafe-builders-core = { path = "../typesafe-builders-core" }
typesafe-builders-derive = { path = "../typesafe-builders-derive" }
