[package]
name = "typesafe-builders"

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
readme.workspace = true
keywords.workspace = true

[dependencies]
typesafe-builders-core.workspace = true
typesafe-builders-derive.workspace = true
