[package]
name = "typesafe-builders"

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
readme.workspace = true
keywords.workspace = true
rust-version.workspace = true

build = "build.rs"

[dependencies]
typesafe-builders-core.workspace = true
typesafe-builders-derive.workspace = true

[dev-dependencies]
trybuild = "1.0.80"
